--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.1",
     "scrollreveal": "^4.0.9",
     "web-vitals": "^2.1.4"
   },
